Fixed Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -440,19 +440,22 @@ ul.social-buttons {
       text-transform: uppercase; }
       
       .contact-method{
-      -webkit-border-radius: 75px;
-      -moz-border-radius: 75px;
-      border-radius: 75px;
-      -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .25);
-      -moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .25);
-      box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .25);
+
       padding:3em;
-      margin-top: 0.5em;
     }
     
     .contact-method-heading {
      margin: 15px 0;
     text-transform: none; }
+    
+    #contact-methods{
+      width:90%;
+      margin: 0 auto;
+    }
+    
+    .contact-details{
+      margin:0 auto;
+    }
       
       
     
